<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_create_goal"
        android:title="@string/action_create_goal"
        android:visible="true"
        android:orderInCategory="1"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/action_manage_sync_sources"
        android:title="@string/action_manage_sync_sources"
        android:visible="true"
        android:orderInCategory="2"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/action_running_goals"
        android:icon="@drawable/ic_finish_flag_24dp"
        android:title="@string/running_goals"
        android:orderInCategory="3"
        android:enabled="false" />

    <item
        android:id="@+id/action_sync_all"
        android:title="@string/sync_all"
        android:visible="true"
        android:enabled="false"
        app:showAsAction="collapseActionView"
        android:orderInCategory="4"
        />
</menu>