<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/base_x2">

    <include layout="@layout/list_item_guidelines" />

    <!--POSITION (LABEL)-->
    <TextView
        android:id="@+id/label"
        style="@style/Text.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_position"
        android:textColor="@color/primary_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_icon" />

    <!--POSITION::IDEAL DISTANCE-->
    <au.com.beba.runninggoal.component.NumericWithLabel
        android:id="@+id/goal_position_distance"
        style="@style/GoalValueLabel.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_icon"
        app:layout_constraintTop_toBottomOf="@id/label"
        tools:NumericWithLabel_numericText="+1.1"
        tools:NumericWithLabel_labelText="@string/position_distance" />

    <!--POSITION::IDEAL DAYS-->
    <au.com.beba.runninggoal.component.NumericWithLabel
        android:id="@+id/goal_position_ideal_days"
        style="@style/GoalValueLabel.Large"
        android:layout_width="@dimen/MATCH_CONSTRAINTS"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/goal_position_distance"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintTop_toBottomOf="@id/label"
        tools:NumericWithLabel_numericText="+0.6"
        tools:NumericWithLabel_labelText="@string/position_ideal_days" />

</androidx.constraintlayout.widget.ConstraintLayout>